--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ authors = ["Rasmus Kaj <kaj@kth.se>"]
 build = "src/build.rs"
 
 [build-dependencies]
-ructe = { version = "^0.3.2", features = ["sass", "mime02"] }
+ructe = { version = "0.3.6", features = ["sass", "mime02"] }
 
 [dependencies]
-iron = "*"
-router = "*"
+iron = "0.5.0"
+router = "0.5.0"
 mime = "0.2.6"
