Use env-logger.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = "~1.0.66"  # Must match gotham dependency
 serde_derive = "~1.0.66"  # Must match gotham dependency
 mime = "~0.3.0"
 log = "*"
+env_logger = "*"
