--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ build = "src/build.rs"
 
 [build-dependencies]
 ructe = { version = "^0.3.6", features = ["sass", "mime03"] }
+failure = "*"
 
 [dependencies]
 gotham = "~0.2.0"
