Update ructe usage.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ authors = ["Rasmus Kaj <kaj@kth.se>"]
 build = "src/build.rs"
 
 [build-dependencies]
-ructe = { version = "0.6.2", features = ["sass", "mime03"] }
+ructe = { version = "0.6.2", features = ["sass", "mime03", "warp"] }
 failure = "*"
 
 [dependencies]
-warp = "0.1.2"
+warp = "0.1.15"
 mime = "0.3.0"
 log = "*"
 env_logger = "*"
