--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "homesite"
 version = "0.1.0"
 authors = ["Rasmus Kaj <kaj@kth.se>"]
-
+edition = "2018"
 build = "src/build.rs"
 
 [build-dependencies]
