Set dependency versions, update ructe to 0.16.1.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 build = "src/build.rs"
 
 [build-dependencies]
-ructe = { version = "0.14.0", features = ["sass"] }
+ructe = { version = "0.16.1", features = ["sass"] }
 
 [dependencies]
-http = "*"
-log = "*"
-env_logger = "*"
-brotli = "*"
-flate2 = "*"
+brotli = "3.3.4"
+env_logger = "0.10.0"
+flate2 = "1.0.25"
+http = "0.2.8"
+log = "0.4.17"
